test/type/wrong/div1.kk
val wrong : int = recursive()

function recursive()  {
  recursive()
  return wrong
}